# PythonProject2

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  main.py  pyproject.toml
Final tasks of section 2.2/: age_message.py  basic_info.py  bubble_sort.py  bug_details.py  bug_filter.py  bug_repport.py  data_type.txt  discount_calculator.py  functions_intro.py  list_vs_tuple.py  log_processing.py  multiplication_table.py  nested_functions.py  number_sum.py  scipt_analysis  scipt_analysis.txt  test_bug_tracker.py  test_case_stats.py  test_case_validation.py  triangle_check.py  user_profile.py
GraphQL API/: app.py
GraphQL_API/: .gitignore  Readme.md  app.py  schema.py
GraphQL_API_DB/: Readme.md  app.py  models.py  requirements.txt  schema.py  users.db
Module_4_2/: .env  Readme.md  conftest.py  constant.py  requirements.txt
My_PythonProject/: test_manual_task.py  Задача 2 п.5 рзадел 2.2.py  Задача 3 п.5 рзадел 2.2.py
PythonProject2/: requirements.txt
TestRequest/: conftest.py  test_request.py
allure-results/: 0030c17c-85b1-42a4-b2b1-7bc62e8e4cc1-result.json  018dfdd2-2ff4-41ec-abee-562d28cdd2a9-result.json  034ef420-f891-41a4-9b68-aea7092f5c39-attachment.json  039d8627-5418-4363-ac75-ea617a59e7c0-container.json  0763a15f-cf70-41da-b8ab-e759f4f3dd14-attachment.txt  0765d30e-6cac-4cae-906d-02e4b5229fa5-attachment.json  07859dfe-2950-4c71-a70a-0fd1faab5a95-result.json  0894a8e8-80f3-4836-a68c-05ed183e28dd-attachment.json  08fab65c-5979-4516-9d2a-a52c83cde3a0-attachment.json  0d2f132c-5899-448d-8078-01c57dbce977-attachment.json  10347334-c46e-45d6-aea9-2c4a31bd26e5-container.json  10e7359f-c038-4c93-9aec-b114002fb8a2-attachment.txt  111d21e4-f953-4e3e-914c-ed68ca0a9f13-attachment.json  12004ce3-bb65-4ada-adc3-220d951ffa12-attachment.txt  15fcc791-24aa-41b4-90e9-137cc2b1c205-attachment.json  1a68ed25-c59c-457f-a9a3-db6bdca5dffa-result.json  (+129 more)
tests/: conftest.py  (+4 more)
(+76 files in other folders)
