[project]
name = "PythonProject2"
version = "0.1.0"
description = "Project for testing API of http://dashboard.fast-api.senior-pomidorov.ru"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "allure-pytest>=2.15.2",
    "dotenv>=0.9.9",
    "faker>=38.2.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[tool.black]
line-length = 88
target-version = ['py311']
#include = '\\.pyi?$'
exclude = '''
(
  \.eggs         |
  \.git          |
  \.hg           |
  \.mypy_cache   |
  \.nox          |
  \.tox          |
  \.venv         |
  _build         |
  buck-out       |
  build          |
  dist
)'''

[tool.isort]
profile = "black"
known_first_party = ["PythonProject2"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true
line_length = 88
